--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^87.0.0",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^6.0.4",
     "nodemailer": "^6.6.3",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.22",
     "passport-local": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
